# twitch-bot

./: .gitignore  main.py  pyproject.toml
efz/: env.py
efz/bot/: __init__.py  bot.py
efz/bot/commands/: channel.py  custom.py  osu.py  system.py
efz/bot/components/: osuirc.py  pcontrol.py  tosu.py  watchdog.py
efz/db/: database.py  models.py
efz/utils/: logger.py
efz/web/: __init__.py  app.py  fastapiadapter.py
