[project]
name = "twitch-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.0",
    "osu-py[async]>=4.2.0",
    "osuirc",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "twitchio[starlette]>=3.2.2",
    "watchdog>=6.0.0",
    "wayland-automation>=0.2.8",
    "websockets>=16.0",
]

[tool.uv.sources]
osuirc = { git = "https://github.com/codefz840/osuirc.git" }
